objects/Partner_Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account_Level__c</fullName>
        <label>Account Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Partner Account for this Profile</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Resellers</value>
            </filterItems>
            <infoMessage>Can only use reseller account type</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Accounts Profile</relationshipLabel>
        <relationshipName>Partner_Accounts_Profile</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applications__c</fullName>
        <label>Applications</label>
        <picklist>
            <picklistValues>
                <fullName>AllianceONE - ZL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya - Secure Router 4134</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brocade - 7500-FCIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brocade - 7800-FCIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco - MDS-FCIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CommVault - Simpana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell - AppAssure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell - Compellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell - DR4x00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell - EqualLogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell - MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell - vRanger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell - VRTX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC - Celerra Replicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC - Data Domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC - Isilon SyncIQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC - MirrorView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC - RecoverPoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC - SRDF/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC - VNXe Replicator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC - VPLEX Geo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDS - HCP Replication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDS - HDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDS - HNAS File Access (CIFS/NFS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDS - HNAS Replication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDS - HUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP - 3PAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP - LeftHand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM - XiVGlobal Mirror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetApp - File Access (CIFS/NFS)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Branch_Office_Type__c</fullName>
        <label>Branch Office Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bill to site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demonstration area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop Ship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail outlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse Site</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel_Programs_Participated_Other__c</fullName>
        <label>Channel Programs Participated Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Programs_Participated__c</fullName>
        <label>Channel Programs Participated</label>
        <picklist>
            <picklistValues>
                <fullName>Allot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Coat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brocade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ericsson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exinda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extreme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortinet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hitachi Data Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ipanema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juniper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palo Alto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Riverbed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Legal_Name__c</fullName>
        <label>Company Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Revenue__c</fullName>
        <label>Company Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>Under 10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,000 - 100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101,000 - 500,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500,000 - 1 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1 Million - 5 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over 5 Million</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Countries_Served__c</fullName>
        <label>Countries Served</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Center_Solutions__c</fullName>
        <description>0-10
10-20
20-30
30-40
40-50
50-60
60-70
70-80
80-90
90-100</description>
        <label>Data Center Solutions %</label>
        <picklist>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <label>Doing Business As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Domains_Used__c</fullName>
        <inlineHelpText>Email domains associated to the partner account. (ex @company.com, @companyinc.com, @coinc.com). It&apos;s used to validate users.</inlineHelpText>
        <label>Email Domains Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Go_To_Market_Sales_Model_Other__c</fullName>
        <label>Go-To-Market Sales Model Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_To_Market_Sales_Model__c</fullName>
        <label>Go-To-Market Sales Model</label>
        <picklist>
            <picklistValues>
                <fullName>Online Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside Field Sales Force</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LmsDepartmentId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Lms Department Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LmsDepartmentName__c</fullName>
        <label>Lms Department Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Segments_Served__c</fullName>
        <label>Marketing Segments Served</label>
        <picklist>
            <picklistValues>
                <fullName>Business and Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conglomerates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy/Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment/Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality &amp; Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing (Industry)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Profit (GNO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telco/Service Providers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation/Logistics (Warehousing)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Marketplace_1__c</fullName>
        <label>Marketplace 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketplace_2__c</fullName>
        <formula>( if( 
len( 
text(MONTH(datevalue(Account__r.CreatedDate+1))) 
) = 1, 
&quot;0&quot;+text(MONTH(datevalue(Account__r.CreatedDate+1))), 
text(MONTH(datevalue(Account__r.CreatedDate+1))) 
)+ 
Right( 
Text( 
Day(datevalue(Account__r.CreatedDate+1)) 
),2) + 
UPPER(right(Id,5)) )</formula>
        <label>Marketplace 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketplace_3__c</fullName>
        <formula>( if( 
len( 
text(MONTH(datevalue( Account__r.CreatedDate +2))) 
) = 1, 
&quot;0&quot;+text(MONTH(datevalue(Account__r.CreatedDate+2))), 
text(MONTH(datevalue(Account__r.CreatedDate+2))) 
)+ 
Right( 
Text( 
Day(datevalue(Account__r.CreatedDate+2)) 
),2) + 
UPPER(right(Id,5)) )</formula>
        <label>Marketplace 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketplace_Code_1_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketplace Code 1 Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Partner Accounts Profile</relationshipLabel>
        <relationshipName>Partner_Accounts_Profile</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketplace_Code_2_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketplace Code 2 Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Partner Accounts Profile (Marketplace Code 2 Campaign)</relationshipLabel>
        <relationshipName>Partner_Accounts_Profile1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketplace_Code_3_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketplace Code 3 Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Partner Accounts Profile (Marketplace Code 3 Campaign)</relationshipLabel>
        <relationshipName>Partner_Accounts_Profile2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketplace_Contact_Email__c</fullName>
        <label>Marketplace Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21 - 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101 - 499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 - 999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1,000 - 4,999</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Engineers__c</fullName>
        <label>Number of Sales Engineers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sales_Representatives__c</fullName>
        <label>Number of Sales Representatives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other %</label>
        <picklist>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Platinum_Requirements__c</fullName>
        <label>Platinum Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Distribution_Partner_1__c</fullName>
        <label>Preferred Distribution Partner 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Distribution_Partner_2__c</fullName>
        <label>Preferred Distribution Partner 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Distribution_Partner_3__c</fullName>
        <label>Preferred Distribution Partner 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Distribution_Partner_Acct_1__c</fullName>
        <description>Preferred Distribution Partner Acct # 1</description>
        <label>Preferred Distribution Partner Acct # 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Distribution_Partner_Acct_2__c</fullName>
        <description>Preferred Distribution Partner Acct # 2</description>
        <label>Preferred Distribution Partner Acct # 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Distribution_Partner_Acct_3__c</fullName>
        <description>Preferred Distribution Partner Acct # 3</description>
        <label>Preferred Distribution Partner Acct # 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Categories_Sold__c</fullName>
        <label>Product Categories Sold</label>
        <picklist>
            <picklistValues>
                <fullName>AAA Servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application (ERP, CRM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Resale/Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Delivery/VOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Device Security Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Devices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optical Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAN Switching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security (IPS, proxy, FW, SSL, VPN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server Load Balancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider Routing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage (SAN, NAS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telco Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UC/VOIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtualization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAN Acceleration/Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WAN Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless WAN</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Offered__c</fullName>
        <label>Professional Services Offered</label>
        <picklist>
            <picklistValues>
                <fullName>Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Provide_Managed_Services__c</fullName>
        <label>Provide Managed Services</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provide_Professional_Services__c</fullName>
        <label>Provide Professional Services</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Other__c</fullName>
        <label>Revenue Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Core_Competency__c</fullName>
        <label>Secondary Core Competency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <description>0-10
10-20
20-30
30-40
40-50
50-60
60-70
70-80
80-90
90-100</description>
        <label>Security %</label>
        <picklist>
            <picklistValues>
                <fullName>0-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60-70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70-80</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80-90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90-100</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Silver_Peak_Competencies__c</fullName>
        <label>Silver Peak Competencies</label>
        <picklist>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtualization</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Silver_Peak_Products_Sold__c</fullName>
        <label>Silver Peak Products Sold</label>
        <picklist>
            <picklistValues>
                <fullName>None Currently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VX</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>